# xCDN-C

./: CMakeLists.txt  README.md
examples/: dict_like_operations.c  fields_access.c  roundtrip.c
src/: ast.c  ast.h  error.c  error.h  lexer.c  lexer.h  parser.c  parser.h  ser.c  ser.h  xcdn.h
tests/: test_basic.c  test_lexer.c  test_parser.c  test_ser.c
